--- a/pages/style.css
+++ b/pages/style.css
@@ -1,9 +1,8 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
 }
-
 
 .header-section {
     height: 80px;
@@ -29,10 +28,11 @@ body {
     align-items: center;
 }
 
-.header-logo {
+.logo {
+    padding: 4px;
     width: 82px;
     height: 52px;
-    border: 1px solid #FFFFFF;
+    border: 1px solid #ffffff;
     box-sizing: border-box;
     border-radius: 2px;
     display: flex;
@@ -42,17 +42,18 @@ body {
 
 .bamboo-logo {
     position: absolute;
-    margin-left: 7px;
-    margin-top: 25px;
+    margin-left: 4px;
+    margin-top: 21px;
 }
 
-.header-logo h1 {
+.logo h1 {
+    margin: 0px;
     font-style: normal;
     font-weight: 400;
     font-size: 19px;
     line-height: 120%;
     text-align: center;
-    color: #FFFFFF;
+    color: #ffffff;
 }
 
 .navigation {
@@ -91,7 +92,7 @@ a {
     position: absolute;
     right: 108px;
     top: 12px;
-    background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+    background: linear-gradient(113.96deg, #f9804b 1.49%, #fe9013 101.44%);
     border-radius: 50%;
 }
 
@@ -110,7 +111,7 @@ a {
     line-height: 80px;
     text-align: center;
     text-transform: uppercase;
-    color: #FFFFFF;
+    color: #ffffff;
 }
 
 .circle h2 span {
@@ -121,7 +122,6 @@ a {
     position: absolute;
     right: 119px;
     top: 546px;
-
 }
 
 button {
@@ -131,20 +131,18 @@ button {
     line-height: 140%;
     text-align: center;
     text-transform: uppercase;
-    color: #FFFFFF;
-    background-image: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+    color: #ffffff;
+    background-image: linear-gradient(113.96deg, #f9804b 1.49%, #fe9013 101.44%);
     border-radius: 25px;
     width: 298px;
     height: 54px;
     border: none;
     padding: 0;
-    cursor: pointer,
+    cursor: pointer;
 }
 
-
 .backstage-section {
-    background-color: #FFFFFF;
-    ;
+    background-color: #ffffff;
 }
 
 .backstage-content {
@@ -193,7 +191,7 @@ button {
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
-    color: #333B41;
+    color: #333b41;
 }
 
 .animal-cards {
@@ -214,7 +212,7 @@ button {
     height: 426px;
     box-sizing: border-box;
     border-radius: 5px;
-    border: 1px solid #FE9013;
+    border: 1px solid #fe9013;
     overflow: hidden;
 }
 
@@ -254,19 +252,17 @@ button {
 
 .animal-cards-button button {
     background-image: none;
-    background-color: #FE9013;
-    ;
+    background-color: #fe9013;
 }
-
 
 button:hover {
     background-image: none;
-    background-color: #E47209;
+    background-color: #e47209;
 }
 
 button:active {
     background-image: none;
-    background-color: #4B9200;
+    background-color: #4b9200;
 }
 
 .animal-cards-arrows-with-content {
@@ -275,9 +271,7 @@ button:active {
     justify-content: center;
     align-items: center;
     gap: 20px;
-    margin: auto;
 }
-
 
 .arrow {
     width: 62px;
@@ -286,11 +280,26 @@ button:active {
     display: flex;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+    background: linear-gradient(113.96deg, #f9804b 1.49%, #fe9013 101.44%);
 }
 
 .pick-and-feed-section {
-    background: linear-gradient(315.75deg, rgba(254, 210, 144, 0.7) 30.06%, #FEBDAB 100.95%, rgba(254, 210, 144, 0.7) 106.36%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
+    background: linear-gradient(315.75deg,
+            rgba(254, 210, 144, 0.7) 30.06%,
+            #febdab 100.95%,
+            rgba(254, 210, 144, 0.7) 106.36%),
+        linear-gradient(315.75deg,
+            rgba(254, 189, 171, 0.74) 30.06%,
+            rgba(243, 169, 248, 0.66) 50.74%,
+            #e0d8f0 80.49%,
+            #eaf7fe 127.9%,
+            #eaf7fe 149.54%),
+        linear-gradient(315.75deg,
+            rgba(254, 189, 171, 0.74) 30.06%,
+            rgba(243, 169, 248, 0.66) 50.74%,
+            #e0d8f0 80.49%,
+            #eaf7fe 127.9%,
+            #eaf7fe 149.54%);
     opacity: 0.9;
 }
 
@@ -315,13 +324,13 @@ button:active {
     width: 463px;
     height: 58px;
     margin-top: 41px;
-    font-family: 'Roboto';
+    font-family: "Roboto";
     font-style: normal;
     font-weight: 400;
     font-size: 48px;
     line-height: 120%;
     text-align: center;
-    color: #FE9013;
+    color: #fe9013;
 }
 
 .feed-content {
@@ -334,7 +343,7 @@ button:active {
     font-weight: 400;
     font-size: 24px;
     line-height: 120%;
-    color: #333B41;
+    color: #333b41;
 }
 
 .feed-second-p {
@@ -342,18 +351,18 @@ button:active {
     font-weight: 500;
     font-size: 16px;
     line-height: 130%;
-    color: #333B41;
+    color: #333b41;
     margin-bottom: 10px;
 }
 
 .feed-content p:last-child {
     margin: 0px;
-    font-family: 'Roboto';
+    font-family: "Roboto";
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 130%;
-    color: #333B41;
+    color: #333b41;
     margin-right: 198px;
 }
 
@@ -367,12 +376,12 @@ button:active {
 
 .feed-how-it-works h3 {
     margin: 0px;
-    font-family: 'Roboto';
+    font-family: "Roboto";
     font-style: normal;
     font-weight: 400;
     font-size: 36px;
     line-height: 130%;
-    color: #333B41;
+    color: #333b41;
 }
 
 .feed-image-content {
@@ -388,8 +397,8 @@ button:active {
 .image-content div {
     width: 166px;
     height: 166px;
-    background: #FFFFFF;
-    border: 1px solid #F9804B;
+    background: #ffffff;
+    border: 1px solid #f9804b;
     border-radius: 5px;
     overflow: hidden;
     display: flex;
@@ -414,9 +423,245 @@ button:active {
 }
 
 .feed-content p:last-child span {
-    border-bottom: 1px solid #F9804B;
+    border-bottom: 1px solid #f9804b;
 }
 
-.pick-and-feed-section button{
+.pick-and-feed-section button {
     margin-bottom: 59px;
+}
+
+.testimonial-header {
+    margin: 0px;
+    margin-top: 140px;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 120%;
+    color: #333b41;
+    text-align: center;
+}
+
+.testimonials-content {
+    margin: auto;
+    margin-top: 47px;
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+}
+
+.testimonial-container {
+    box-sizing: border-box;
+    height: 391px;
+    width: 268px;
+    background: #f1f3f2;
+    border-radius: 20px;
+    border: 2px solid #febdab;
+    padding: 15px 15px 19px 15px;
+}
+
+.user-name {
+    margin: 0px;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 120%;
+    margin-bottom: 1px;
+    color: #000000;
+}
+
+.user-location {
+    margin: 0px;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 300;
+    font-size: 15px;
+    line-height: 120%;
+    color: #bdbdbd;
+}
+
+.user-location span {
+    margin-left: 6px;
+    margin-right: 6px;
+}
+
+.user-review {
+    margin: 0px;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 300;
+    font-size: 15px;
+    line-height: 120%;
+    color: #767474;
+}
+
+.testimonial-user-data {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.feedback-button {
+    margin-top: 31px;
+    background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+    border-radius: 5px;
+    margin-bottom: 180px;
+}
+
+.progress-bar {
+    margin-top: 21px;
+    display: flex;
+    justify-content: center;
+}
+
+.slider {
+    margin: auto;
+    -webkit-appearance: none;
+    border: 0.5px solid #FEBDAB;
+    overflow: hidden;
+    width: 599px;
+    height: 8px;
+    background: #FE9013;
+    border-radius: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    box-sizing: border-box;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    background: #FE9013;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 115.19px;
+    height: 6px;
+}
+
+.footer-section {
+    height: 443px;
+    background: #111115;
+}
+
+.footer-container {
+    position: relative;
+}
+
+.footer-section .logo {
+    padding: 0.5px 4.75px 4.75px 6.5px;
+}
+
+.footer-section .bamboo-logo {
+    left: 8px;
+}
+
+.footer-section button {
+    margin-top: 68px;
+    background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+    border-radius: 5px;
+}
+
+.footer-container {
+    padding-top: 41px;
+}
+
+.footer-social-icons {
+    width: auto;
+    padding: 0px;
+    margin: 0px;
+    margin-top: 44px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.footer-social-icons a {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    margin-top: 10px;
+}
+
+
+.sn-circle {
+    display: block;
+    width: 26px;
+    height: 26px;
+    background: rgba(196, 196, 196, 0.5);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sn-text {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 140%;
+    color: #FFFFFF;
+}
+
+.youtube {
+    width: 18px;
+    height: 13px;
+
+}
+
+.designed-by {
+    width: 220px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    gap: 13px;
+    text-align: right;
+}
+
+.designed-by-text {
+    padding: 0px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 100;
+    font-size: 15px;
+    line-height: 120%;
+    color: #FFFFFF;
+    margin: 0;
+    float: right;
+}
+
+.footer-menu {
+    margin-top: 156px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 0px;
+    gap: 58Px
+}
+
+.footer-menu li {
+    padding-top: 10px;
+    list-style-type: none;
+}
+
+.footer-bottom-part {
+    display: flex;
+}
+
+.footer-menu li a {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 140%;
+}
+.footer-menu{
+    width: 821px;
+    display: flex;
+    justify-content: center;
 }
